objects/vlocity_cmt__ConfigurationSnapshot__c.object
<CustomObject>
    <description>Configuration Snapshot allows you to track/manage multiple versions of cacheable datasets linking to snapshot id with varying effectivity supporting zero downtime during cache generation for the APIs using cached datasets.</description>
    <fields>
        <fullName>vlocity_cmt__ConfigurationSnapshotId__c</fullName>
        <description>Auto generated number to represent the cached data set.</description>
        <displayFormat>{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Configuration Snapshot Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <description>End date of the linked cached dataset through snapshot id.</description>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <description>Start date of the linked cached dataset through snapshot id.</description>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status of the configuration snapshot which helps us to track the status of cached/caching dataset with following states Processing(cache generation is in progress), Ready(cache generation is complete and available for activation), Active(generated cached dataset is active and available for APIs/Services to use them for run time computation), Expired(cache dataset linked to configuration is no longer effective) and Aborted(cache generation is aborted halfway either due to manual intervention/application error).</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Configuration Snapshot</label>
    <nameField>
        <label>Configuration Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>